# nullpath

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  LAUNCH-CHECKLIST.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  keepalive.yml
.husky/: pre-commit
docs/: announcement.md  code-signing.md  demo.webm  privacy.md  setup-auth.md  terms.md  updater.md
plans/: 00-overview.md  web-pentesting.md
public/: legal.css  privacy.html  robots.txt  site.webmanifest  sitemap.xml  terms.html
research/: canonical-taxonomy.md
scripts/: apply-migrations-once.mjs  build-branding.mjs  build-seed-cloud.mjs  build-seed.mjs  capture-demo.mjs  capture-screenshots.mjs  copy-sql-wasm.mjs  verify-region-order.mjs  verify-zone-layout.mjs
src/: App.tsx  main.tsx  store.test.ts  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 002_seed_web.sql  005_drop_session_tracking.sql
src-tauri/src/: idle.rs  lib.rs  main.rs
src/__mocks__/: empty-string.ts  sql-js.ts  tauri-plugin-opener.ts  tauri-plugin-sql.ts
src/components/: ErrorBoundary.tsx  ModalRoot.tsx  NodePanel.tsx  OperatorCardPortrait.tsx  RandomKickModal.tsx  SearchModal.tsx  ShortcutsModal.tsx  Sidebar.tsx  Toaster.tsx  TopBar.tsx  VirtualList.tsx
src/components/pixel/: PixelBar.tsx  PixelButton.tsx  PixelFrame.tsx  PixelSprite.tsx  PixelTag.tsx
src/components/ui/: Button.tsx  Tag.tsx
src/db/: cloud.ts  index.test.ts  index.ts  local.ts  migrations.ts  mutations.ts  router.test.ts  sqljs.ts  types.ts
src/hooks/: useDailyBriefing.ts  useMediaQuery.ts  useSessionTicker.ts
src/lib/: achievementIcons.test.ts  achievementIcons.ts  achievements.test.ts  achievements.ts  cn.ts  limits.test.ts  limits.ts  realtime.ts  resourceKinds.ts  routePersistence.ts  sfx.ts  supabase.ts  toast.test.ts  toast.ts  url.test.ts  url.ts  version.ts
src/views/: AchievementsView.tsx  AtlasView.tsx  BootView.tsx  BountiesView.tsx  CodexView.tsx  RegionView.tsx  SettingsView.tsx  SignInView.tsx  StatsView.tsx  Stubs.tsx  ZoneView.tsx
supabase/migrations/: 20260506120000_initial_schema.sql  20260506120100_functions.sql  20260506120200_seed_web.sql  20260506120300_security_hardening.sql  20260506120400_polish.sql  20260507120000_complete_idempotency.sql
(+5 files in other folders)
