[package]
name = "nullpath"
version = "0.21.0-beta.1"
description = "Nullpath — gamified offsec career atlas"
authors = ["enrik-m"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a Windows-only conflict with the bin name.
name = "nullpath_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
